# can-i-get-a-stream

./: Cargo.toml  README.md
frontend/: .env.example  next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.ts
frontend/src/: env.js
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_components/: arc.tsx  checkbox.tsx  go-live.tsx  nav.tsx  since.tsx  tooltip.tsx
frontend/src/app/_components/icons/: check.tsx  gear.tsx  shark-water.tsx  video-off.tsx  view-all.tsx  xmark-sm.tsx
frontend/src/app/all/: page.tsx
frontend/src/app/go-live/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/stream/: page.tsx
frontend/src/app/stream/[streamId]/: page.tsx
frontend/src/server/api/: root.ts  trpc.ts
frontend/src/server/api/routers/: post.ts  streams.ts
frontend/src/server/auth/: config.ts
frontend/src/styles/: globals.css
frontend/src/trpc/: query-client.ts
src/: main.rs  utils.rs
src/api/: data.rs  mod.rs  serve.rs  upload.rs
src/migrations/: 1_create-streams.sql
