[package]
name = "can-i-get-a-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.93"
axum = { version = "0.7.8", features = ["http2", "macros"] }
hyper = "1.5.0"
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.133"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tokio-util = "0.7.12"
tower = "0.5.1"
