[package]
name = "can-i-get-a-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.93"
axum = { version = "0.7.9", features = [ "http2", "http1", "macros", "tokio", "tower-log", "tracing", "form", "query", "matched-path", "json", "ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = {version ="1.5.2",  features = ["http2", "http1", "server"] }
serde = { version = "1.0.214", features = ["serde_derive"] }
serde_json = "1.0.133"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tokio-util = "0.7.12"
tokio-tungstenite = "0.24.0"
tokio-rustls = "0.26"
tower = "0.5.1"
clap = { version = "4.5.23", features = ["derive"] }
uuid = {version = "1.11.0", features = ["v4","fast-rng","macro-diagnostics"]}
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls", "sqlite" , "chrono" ] }
chrono = {version= "0.4.39", features = ["serde"] }
futures = "0.3.31"
rustls = { version = "0.23.20", features = ["ring"] }
